<?xml version="1.0"?>
<package format="2">
  <name>fastlio_to_mavros</name>
  <version>1.0.0</version>
  <description>
    Bridge node to convert FAST-LIO odometry to MAVROS vision_pose for PX4 visual-inertial fusion.
    Handles coordinate transformation from LIO frame to ENU frame.
  </description>

  <maintainer email="uav@example.com">UAV Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>eigen</depend>
  <depend>mavros_msgs</depend>

  <export>
  </export>
</package>

